--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 			<div class="inner">
 				<header>
 					<h2>Security Audit. +26k lines of code were audited.</h2>
-					<p>A community funded <a target="_blank" href="SmartDec Grin++ Security Audit.pdf">Security Audit</a> was performed by <a target="_blank" href="https://smartdec.com/">SmartDec</a>. The task was to find and describe security issues in the code base of the platform. The code was completely manually analyzed taking into consideration the Mimblewimble protocol specification and the C++ source code. Recommendations were properly followed and critical issues mitigated.</p>
+					<p>A community funded <a target="_blank" href="SmartDec%20Grin++%20Security%20Audit.pdf">Security Audit</a> was performed by <a target="_blank" href="https://smartdec.com/">SmartDec</a>. The task was to find and describe security issues in the code base of the platform. The code was completely manually analyzed taking into consideration the Mimblewimble protocol specification and the C++ source code. Recommendations were properly followed and critical issues mitigated.</p>
 				</header>
 			</div>
 		</section>
@@ -174,21 +174,21 @@
 						</div>
 						<div class="col-3 col-12-medium">
 							<h3>Contributors</h3>
-							<il>
+							<ul>
 								<li>David Burkett</li>
 								<li>David Tavarez</li>
 								<li>....</li>
 								<li>....</li>
-							</il>
+							</ul>
 						</div>
 						<div class="col-3 col-12-medium">
 							<h3>Links</h3>
-							<il>
+							<ul>
 								<li><a target="_blank" href="https://github.com/GrinPlusPlus">Grin++ at Github</a></li>
 								<li><a target="_blank" href="https://github.com/GrinPlusPlus/GrinPlusPlus/wiki">Grin++ Wiki</a></li>
 								<li><a target="_blank" href="https://t.me/GrinPP">Grin++ on Telegram</a></li>
 								<li><a target="_blank" href="https://forum.grin.mw/">Grin forum on grin.mw</a></li>
-							</il>
+							</ul>
 						</div>
 					</div>					
 				</div>
