--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 			<ul class="actions special">
 				<li><a target="_blank" href="bitcoin:3G39h3G7HneymYL4kdgkDFLoB9uQ536Cw1" class="button primary icon brands fa-btc">Donating</a></li>
 				<li><a target="_blank" href="https://github.com/GrinPlusPlus" class="button">Coding</a></li>
-				<li><a target="_blank" href="https://shop.grinplusplus.com/" class="button">Shoping</a></li>
+				<li><a target="_blank" href="https://shop.grinplusplus.com/" class="button">Shopping</a></li>
 			</ul>
 			<h4 class="align-center">Bitcoin: 3G39h3G7HneymYL4kdgkDFLoB9uQ536Cw1</h4>
 		</section>
